# zenoh-perf

./: .gitignore  Cargo.toml  plot.py  pub.sh  test-t-put-sub.sh  test.sh
comparison/cyclonedds/: .gitignore  Makefile  cyclonedds.xml  mod-for-perf.patch
comparison/cyclonedds/latency/: ping.c  pong.c
comparison/cyclonedds/throughput/: subscriber.c
comparison/kafka/scripts/: install-kafka.sh
comparison/src/rumqttc/: Cargo.toml  rust-toolchain.toml
comparison/src/rumqttc/src/: lib.rs
comparison/src/rumqttc/src/rumqttc_ping/: main.rs  opts.rs
comparison/src/rumqttc/src/rumqttc_pong/: main.rs  opts.rs
comparison/src/rumqttc/src/rumqttc_pub_thr/: main.rs  opts.rs
comparison/src/rumqttc/src/rumqttc_sub_thr/: main.rs  opts.rs
comparison/zenoh/: Cargo.toml  Makefile
comparison/zenoh-kafka-mqtt/kafka/: .gitignore  Cargo.toml  Makefile
comparison/zenoh-kafka-mqtt/kafka/scripts/: install-kafka.sh
comparison/zenoh-kafka-mqtt/mqtt/: .gitignore  Makefile
comparison/zenoh-kafka-mqtt/mqtt/latency/: mqtt_ping.c
comparison/zenoh-kafka-mqtt/mqtt/scripts/: install-mosquitto.sh
comparison/zenoh-kafka-mqtt/mqtt/throughput/: mqtt_sub_thr.c
comparison/zenoh-kafka-mqtt/zenoh/: Cargo.toml  Makefile
config/: _t_v5.sh  _t_v6.sh  _v5.sh
latency/: Cargo.toml
overhead/: Cargo.toml
query/: Cargo.toml
throughput/: Cargo.toml
